# breakpad-example

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp
vcpkg_registry/ports/breakpad/: portfile.cmake
vcpkg_registry/versions/: baseline.json
vcpkg_registry/versions/b-/: breakpad.json
